# ytmetrics

./: .gitignore  .pre-commit-config.yaml  INSIGHTS_PLAN.md  README.md  SCHEMA.md  SETUP.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
fixtures/main/: channel_daily.json  demographics.json  devices.json  discovery.json  geography.json  meta.json  retention.json  revenue.json  search_terms.json  subscribed_status.json  traffic_sources.json  video_daily.json  video_discovery.json  video_revenue.json  video_traffic_sources.json  videos.json
sample/: ytmetrics.sample.db
scheduling/: com.ytmetrics.briefing.plist.example  com.ytmetrics.daily-digest.plist.example  com.ytmetrics.daily.plist.example  com.ytmetrics.weekly.plist.example
scripts/: daily_briefing.sh  weekly_briefing.sh
src/ytmetrics/: __init__.py  auth.py  briefing.py  channel.py  cli.py  config.py  daily.py  freshness.py  logging_setup.py  mailer.py  pipeline.py  retry.py  status.py  timeutil.py
src/ytmetrics/sources/: __init__.py  base.py  live.py  normalize.py  replay.py
src/ytmetrics/store/: __init__.py  backup.py  doctor.py  migrations.py  notify.py  schema.py  sqlite_store.py
tests/: conftest.py  test_auth.py  test_backup.py  test_briefing.py  test_cli_window.py  test_config.py  test_daily.py  test_freshness.py  test_insights.py  test_insights_retention.py  test_mailer.py  test_normalize.py  test_pipeline_replay.py  test_redaction.py  test_retry.py  test_store.py  test_timeutil.py
