[project]
name = "ytmetrics"
version = "0.1.0"
description = "Pull YouTube Analytics into a local SQLite system of record (Sheets/exports later)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Robert Horvick" }]
dependencies = [
    "google-api-python-client>=2.120",
    "google-auth>=2.28",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
# macOS Keychain secret backend (opt-in)
keychain = ["keyring>=24"]
# Weekly PDF briefing generator (opt-in)
briefing = ["matplotlib>=3.7"]

[project.scripts]
ytmetrics = "ytmetrics.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ytmetrics"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
packages = ["ytmetrics"]
mypy_path = "src"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
